src/test/run-pass/issue-2526-a.rs
// xfail-fast
// aux-build:issue-2526.rs

use zmq;
import zmq::*;

fn main() {}

